添加本地知识库模块